<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvRateTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ostrovsky_bold"
            android:gravity="center"
            android:text="Анкета"
            android:textColor="@color/green"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvHealthTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ostrovsky_bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="о самочувствии"
            android:textColor="@color/green"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q1_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q1_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q1_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q2_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q2_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q2_option3"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q3_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q3_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Менее 1 часа назад" />

            <RadioButton
                android:id="@+id/q3_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-4 часа назад" />

            <RadioButton
                android:id="@+id/q3_option3"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Более 4 часов назад" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q4_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodMood" />

            <RadioButton
                android:id="@+id/q4_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normalMood" />

            <RadioButton
                android:id="@+id/q4_option3"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badMood" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q5_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q5_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q5_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question6"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q6_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q6_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q6_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question7"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q7_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q7_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q7_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/q7_option3"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maybe" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question8"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q8_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q8_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q8_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question9"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q9_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q9_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/q9_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/question10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/q10_radioGr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q10_option1"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Повышенное" />

            <RadioButton
                android:id="@+id/q10_option2"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Пониженное" />

            <RadioButton
                android:id="@+id/q10_option3"
                android:textColor="@color/pink"
                android:fontFamily="@font/ostrovsky_bold"
                android:textSize="15sp"
                app:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Умеренное" />
        </RadioGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/terminate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/ostrovsky_bold"
            android:text="@string/terminate"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>